# error_dashboard

./: BUILDING.md  CLA.md  CMakeLists.txt  CMakeLists_tests.txt  LICENSE  README.md  TEST_README.md  VERSION  run_tests.sh  test_errorsurface.cpp
.github/workflows/: cmake-multi-platform.yml
cmake/: GitVersion.cmake
src/: logcollector.cpp  logcollector.h  logentry.h  main.cpp  mainwindow.cpp  mainwindow.h  persistencemanager.cpp  persistencemanager.h  settingsdrawer.cpp  settingsdrawer.h  statstab.cpp  statstab.h  threatdetector.cpp  threatdetector.h
